# Sajda

./: CLAUDE.md  README.md  WINDOWS_PORT_PLAN.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: download-notify.yml  release.yml
public/: AppIcon.icns
scripts/: dev-reset-app-only.sh  dev-reset.sh  generate-icons.js
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: reminders.json
src-tauri/src/: audio.rs  jakim_api.rs  lib.rs  location.rs  main.rs  prayer_engine.rs  scheduler.rs  settings.rs
src-tauri/swift/SajdaLocation/: Package.swift
src-tauri/swift/SajdaLocation/Sources/SajdaLocation/: SajdaLocation.swift
src/components/: Dashboard.tsx  DashboardSkeleton.tsx  ErrorBoundary.tsx  Skeleton.tsx
src/components/__tests__/: ErrorBoundary.test.tsx
src/data/: reminders.ts
src/hooks/: useBackgroundInit.ts
src/lib/__tests__/: utils.test.ts
src/store/: PrayerStore.ts  ReminderStore.ts  SettingsStore.ts  TrackerStore.ts  UpdateStore.ts
src/store/__tests__/: ReminderStore.test.ts  TrackerStore.test.ts
src/test/: setup.ts
src/utils/: Analytics.ts  AudioService.ts  HijriDate.ts  LocationService.ts  MalayDictionary.ts  Platform.ts  ReminderService.ts  UISounds.ts  ZoneData.ts
src/utils/__tests__/: HijriDate.test.ts  LocationService.test.ts  MalayDictionary.test.ts  Platform.test.ts  ZoneData.test.ts
