[package]
name = "sajda"
version = "0.0.7"
description = "Modern Islamic Prayer Times & Reminder App for macOS"
authors = ["Hafiz Hanif"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sajda_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.19.0"
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-store = "2.4.2"
reqwest = { version = "0.13.1", features = ["json"] }
tauri-plugin-geolocation = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
salah = "0.7.6"
chrono = "0.4.43"
tokio = "1.49.0"
image = "0.25"
swift-rs = "1.0.7"

[dev-dependencies]
tokio-test = "0.4"
